# docs-rs-mcp

./: .gitignore  Cargo.toml  Justfile  NOTES.md  README.md  build.rs  clippy.toml  plan.md
.github/workflows/: ci.yml
instructions/: server.md
instructions/tools/: changelog.md  compare_versions.md  crate_metadata.md  crate_overview.md  dependency_tree.md  find_examples.md  get_item.md  inspect_feature_flags.md  list_implementors.md  list_impls.md  list_methods.description.md  list_methods.md  list_module.description.md  list_module.md  list_versions.md  manifest_dependencies.md  read_source_file.md  readme.md  resolve_version.description.md  search_items.description.md  search_items.md  search_source.md
src/: client.rs  config.rs  context.rs  counter.rs  docs_rs.rs  errors.rs  main.rs  rustdoc_json.rs  semver_types.rs  server.rs  test_utils.rs
src/client/: changelog.rs  compare_versions.rs  crate_metadata.rs  dependency_tree.rs  docs.rs  find_examples.rs  get_docs.rs  get_item.rs  get_source.rs  inspect_feature_flags.rs  list_implementors.rs  list_impls.rs  list_methods.rs  list_module.rs  manifest_dependencies.rs  mod.rs  readme.rs  render.rs  search_items.rs  source.rs  status.rs  versions.rs
src/tools/: changelog.rs  compare_versions.rs  crate_metadata.rs  crate_overview.rs  dependency_tree.rs  find_examples.rs  get_item.rs  inspect_feature_flags.rs  list_implementors.rs  list_impls.rs  list_methods.rs  list_module.rs  list_versions.rs  manifest_dependencies.rs  mod.rs  read_source_file.rs  readme.rs  resolve_version.rs  search_items.rs  search_source.rs
src/types/: mod.rs  rustdoc_types.rs  semver.rs  semver_types.rs
tests/fixtures/: axum_0.8.8.json.zst  axum_0.8.9.json.zst
