[package]
name = "docs-rs-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["macros"] }
directories = "6.0.0"
futures-util = "0.3"
reqwest = { version = "0.13", features = ["stream"] }
rmcp = { version = "1.7.0", features = [
    "auth",
    "client",
    "elicitation",
    "macros",
    "schemars",
    "server",
    "transport-io",
    "transport-streamable-http-server",
] }
rustdoc-types = "0.57.3"
semver = { version = "1.0.28", features = ["serde"] }
serde = "1.0.228"
serde_json = "1.0.150"
target-triple = "1.0.0"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zstd = "0.13.3"

[dev-dependencies]
mockito = "1.7.2"
pretty_assertions = "1.4.1"
tempfile = "3.27.0"
