[package]
name = "docs-rs-mcp"
version = "0.1.0-alpha.3"
edition = "2024"
authors = ["Denis Cornehl <denis@cornehl.org>"]
description = "MCP server exposing Rust crate documentation from docs.rs and crates.io to AI assistants."
repository = "https://github.com/rust-lang/docs-rs-mcp"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["mcp", "docs-rs", "rustdoc", "documentation", "ai"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["macros"] }
cargo-manifest = "0.21.0"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
figment = { version = "0.10.19", features = ["toml"] }
flate2 = "1.1.9"
futures-util = "0.3"
moka = { version = "0.12.15", features = ["future"] }
opentelemetry = "0.32.0"
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = [
    "trace",
    "grpc-tonic",
] }
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio"] }
parse-changelog = { version = "0.6", default-features = false }
reqwest = { version = "0.13", features = ["stream"] }
rmcp = { version = "1.7.0", features = [
    "auth",
    "client",
    "elicitation",
    "macros",
    "schemars",
    "server",
    "transport-io",
    "transport-streamable-http-server",
] }
rustdoc-types = "0.57.3"
semver = { version = "1.0.28", features = ["serde"] }
serde = "1.0.228"
serde_json = "1.0.150"
serde_with = "3.21.0"
tar = "0.4.46"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
url = { version = "2.5.8", features = ["serde"] }
zstd = "0.13.3"

[dev-dependencies]
mockito = "1.7.2"
pretty_assertions = "1.4.1"
tempfile = "3.27.0"
test-case = "3.3.1"
